<resources>
    <string name="app_name">SportGuide</string>
    <integer name="com_vk_sdk_AppId">6240516</integer>

    <string name="find">Найти:</string>
    <string name="objects">Объекты</string>
    <string name="events">Мероприятия</string>
    <string name="sorting_by">Сортировать по:</string>
    <string name="join">Присоединиться</string>
    <string name="price">Цена: </string>
    <string name="description">Описание: </string>
    <string name="organizer">Организатор: </string>
    <string name="kind_sport">Вид спорта: </string>
    <string name="list_members">Список участников: </string>
    <string name="take_over">Забронировать</string>
    <string name="contacts">Контакты</string>
    <string name="reviews">Отзывы:</string>
    <string name="add_review">Оставить отзыв:</string>
    <string name="send">Отправить</string>
    <string name="complain">Пожаловаться</string>
    <string name="interests">Интересы</string>
    <string name="event">Мероприятие</string>
    <string name="place">Объект</string>
    <string name="cancel">Отмена</string>
    <string name="ok">Ok</string>
    <string name="download_photo">Загрузить фото</string>
    <string name="name">Название</string>
    <string name="address">Адрес</string>
    <string name="number">Номер телефона</string>
    <string name="save">Сохранить</string>
    <string name="city">Город:</string>
    <string name="exit_from_accounts">Выйти из аккаунта</string>
    <string name="callback">Обратная связь</string>
    <string name="sign_in">ВОЙТИ</string>
    <string name="count_members">Количество участников</string>

    <string-array name="event">
        <item>Объект</item>
        <item>Мероприятие</item>
    </string-array>
    <string-array name="type_complaints">
        <item>Не соответсвует описанию</item>
        <item>Не существует</item>
        <item>Призыв к эстремизму</item>
    </string-array>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

</resources>
